# omnishell

./: .gitignore  Makefile  README.md  TODO.md  config.h.in  meson.build  subprojects
app/: assets.cpp  console.cpp  osdemo.1  osdemo.bash  osdemo.cpp
assets/: .gitignore  ICON_MAPPING.md  Makefile  svg2png
assets/themes/: popular.json
debian/: changelog  control  libomnishell-dev.install  libomnishell1.install  omnishell.install  rules
po/: LINGUAS  POTFILES.in  ja_JP.po  ko_KR.po  meson.build  omnishell.pot  regen_po.py  zh_CN.po  zh_TW.po
scripts/: themeformat.py
src/: Makefile  assets.s  bulk.h  bulk_1.h  module.cpp  wx_pch.h
src/app/controlpanel/: ControlPanelApp.cpp  ControlPanelApp.hpp
src/app/notepad/: NotepadApp.cpp  NotepadApp.hpp
src/cli/zash/: zash.lex  zash.y  zash_driver.c  zash_driver.hpp  zash_interpreter.cpp  zash_interpreter.hpp  zash_yy.h
src/cli/zash/builtins/: builtins.cpp  (+1 more)
src/core/: App.cpp  App.hpp  Category.cpp  Module.cpp  Module.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  Process.cpp  Process.hpp  RegistryDb.cpp  RegistryDb.hpp  ServiceManager.cpp  ServiceManager.hpp  TrayIcon.cpp  TrayIcon.hpp  VFSBootstrap.cpp  VFSBootstrap.hpp  VolUrl.cpp  VolUrl.hpp
src/core/auth/: AuthResult.hpp  AuthTypes.hpp  IAuthProxy.hpp  IAuthenticatable.hpp
src/core/registry/: FileAssociations.hpp  LocalRegistry.cpp  LocalRegistry.hpp  RegistryKeyUtil.cpp  RegistryKeyUtil.hpp  RegistryService.cpp  RegistryService.hpp  RegistryTypes.hpp  RegistryValueIo.cpp  VolumeRegistry.cpp  VolumeRegistry.hpp
src/daemon/: ApiDirIndex.cpp  ApiDirIndex.hpp  ApiFileController.cpp  ApiVolumeIndex.hpp  AssetController.cpp  DirIndex.hpp  FileController.cpp  FileIndex.cpp  HttpDaemon.cpp  HttpDaemon.hpp  VolumeIndex.hpp
src/mod/background/: BackgroundSettingsApp.cpp  BackgroundSettingsApp.hpp  BackgroundSettingsBody.cpp  BackgroundSettingsBody.hpp  BackgroundSettingsCore.cpp  BackgroundSettingsCore.hpp  BackgroundSettingsFrame.hpp
src/mod/browser/: BrowserApp.cpp  BrowserApp.hpp  BrowserBody.cpp  BrowserBody.hpp  BrowserFrame.cpp  BrowserFrame.hpp
src/mod/calculator/: CalculatorApp.cpp  CalculatorBody.cpp  CalculatorBody.hpp  CalculatorFrame.hpp
src/mod/calendar/: CalendarApp.cpp  CalendarApp.hpp  CalendarBody.hpp  CalendarCore.cpp  CalendarCore.hpp  CalendarFrame.cpp  CalendarFrame.hpp
src/mod/camera/: CameraApp.cpp  CameraBody.cpp  CameraBody.hpp  CameraGstPreview.cpp
src/mod/console/: ConsoleApp.cpp  ConsoleApp.hpp  ConsoleBody.cpp  ConsoleBody.hpp  ConsoleFrame.cpp  ConsoleFrame.hpp
src/mod/controlpanel/: ControlPanelApp.cpp  ControlPanelApp.hpp  ControlPanelBody.cpp  ControlPanelBody.hpp  ControlPanelFrame.cpp
src/mod/explorer/: ExplorerApp.cpp  ExplorerApp.hpp  ExplorerBody.cpp  ExplorerBody.hpp  ExplorerCore.cpp  ExplorerCore.hpp  ExplorerFrame.cpp
src/mod/fiveormore/: FiveOrMoreApp.cpp  FiveOrMoreApp.hpp  FiveOrMoreBody.cpp  FiveOrMoreFrame.cpp  FiveOrMoreFrame.hpp
src/mod/mediaplayer/: MediaPlayerApp.cpp  MediaPlayerApp.hpp  MediaPlayerBody.cpp  MediaPlayerBody.hpp  MediaPlayerFrame.cpp
src/mod/minesweeper/: MinesweeperApp.cpp  MinesweeperApp.hpp  MinesweeperBody.cpp  MinesweeperFrame.cpp  MinesweeperFrame.hpp
src/mod/musicbox/: MusicBoxApp.cpp  MusicBoxApp.hpp  MusicBoxBody.cpp  MusicBoxBody.hpp  MusicBoxFrame.cpp  MusicBoxFrame.hpp
src/mod/notepad/: NotepadApp.cpp  NotepadApp.hpp  NotepadBody.cpp  NotepadBody.hpp  NotepadCore.cpp  NotepadCore.hpp  NotepadFrame.cpp  NotepadFrame.hpp
src/mod/paint/: PaintApp.cpp  PaintApp.hpp  PaintBody.cpp  PaintBody.hpp  PaintCore.cpp  PaintCore.hpp
src/mod/passwordmanager/: LoginDialog.cpp  LoginDialog.hpp  PasswordDb.hpp  PasswordManager.hpp
src/mod/photoviewer/: PhotoViewerApp.cpp  PhotoViewerBody.cpp
src/mod/registry/: RegistryApp.cpp  RegistryApp.hpp  RegistryBody.cpp  RegistryBody.hpp  RegistryCore.cpp  RegistryCore.hpp  RegistryFrame.cpp
src/mod/snippingtool/: SnippingToolApp.cpp  SnippingToolBody.cpp  SnippingToolBody.hpp  SnippingToolFrame.hpp
src/mod/solitaire/: SolitaireApp.cpp  SolitaireApp.hpp  SolitaireBody.cpp  SolitaireFrame.cpp
src/mod/soundrecorder/: SoundRecorderApp.cpp  SoundRecorderApp.hpp  SoundRecorderBody.cpp  SoundRecorderBody.hpp  SoundRecorderFrame.cpp
src/mod/stopwatch/: StopWatchApp.cpp  StopWatchApp.hpp  StopWatchBody.hpp  StopWatchCore.cpp  StopWatchCore.hpp  StopWatchFrame.cpp  StopWatchFrame.hpp
src/mod/sudoku/: SudokuApp.cpp  SudokuApp.hpp  SudokuBody.cpp
src/mod/taskmanager/: TaskManagerApp.cpp  TaskManagerApp.hpp  TaskManagerBody.hpp
src/omnishell/core/: App.cpp  App.hpp  Category.cpp  Category.hpp  LocaleSetup.cpp  LocaleSetup.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  RunConfig.hpp  TrayIcon.cpp  TrayIcon.hpp  VolUrl.cpp
src/omnishell/daemon/: ApiDirIndex.cpp  ApiFileController.hpp  ApiVolumeIndex.cpp  AssetController.cpp  AssetController.hpp  DirIndex.cpp  FileController.hpp  FileIndex.hpp  HttpDaemon.cpp  HttpDaemon.hpp  VolumeIndex.cpp
src/omnishell/shell/: DesktopWindow.cpp  Shell.cpp  Shell.hpp  StartMenu.cpp  StartMenu.hpp  Taskbar.cpp  VfsDaemonHost.cpp  VfsWebViewHandlers.cpp  VfsWebViewHandlers.hpp
src/omnishell/ui/: IconTheme.cpp  Location.cpp  LocationHistory.cpp  ThemeStyles.hpp
src/omnishell/wx/: WxChecked.cpp  WxChecked.hpp  artprovs.hpp  wxConsole.cpp  wxConsole.hpp
src/shell/: DesktopWindow.cpp  DesktopWindow.hpp  Shell.cpp  Shell.hpp  StartMenu.cpp  StartMenu.hpp  Taskbar.cpp  Taskbar.hpp  VfsDaemonHost.cpp  VfsDaemonHost.hpp  VfsWebViewHandlers.cpp
src/ui/: IconTheme.cpp  IconTheme.hpp  Location.cpp  Location.hpp  LocationHistory.hpp
src/ui/dialogs/: ChooseFileDialog.cpp  ChooseFileDialog.hpp  ChooseFolderDialog.cpp  ChooseFolderDialog.hpp  ChoosePrinterDialog.cpp  ChoosePrinterDialog.hpp
src/ui/widget/: BreadcrumbNav.cpp  BreadcrumbNav.hpp  DirTreeView.cpp  DirTreeView.hpp  FileListView.cpp  FileListView.hpp
src/wx/: LabeledIcon.cpp  LabeledIcon.hpp  SafeWxHandler.hpp  WxChecked.cpp  wxConsole.cpp  wxConsole.hpp  wxTerminal.cpp  wxTerminal.hpp  wxcWindow.hpp
src/wx/term/: xterm.cpp  xterm.hpp
(+144 files in other folders)
